syntax = "proto3";

package auth;

option go_package="github.com/joshmeranda/marina/gateway/api/auth";

service AuthService {
	rpc Login(LoginRequest) returns (LoginResponse) {}
}

enum SecretType {
	Unknown = 0;
	Password = 1;
	Github = 2;
}

message LoginRequest {
	bytes Secret = 1;
	SecretType secretType = 2;
	string user = 3;
}

message LoginResponse {
	string token = 1;
}
